export const snapshot = {};

snapshot[`sqlr CLI 1`] = `
{
  code: 0,
  output: "
Usage:   sqlr 
Version: *

Description:

  Command line for interacting with SQL databases. Use '--help' for each command to list it's parameters

Options:

  -h, --help     - Show this help.                                                 
  -V, --version  - Show the version number for this program.                       
  --debug        - Enable debug logs                                               
  -g, --global   - Use global scope for connections (ignore git repository scope)  

Commands:

  add                       - Add new connection. Run without parameters to use wizard.                     
  rm          [connection]  - Remove selected connection                                                    
  get         [connection]  - Get details of selected connection                                            
  ls-types                  - Get available connection types to be used with '--type' parameter in 'add'    
                              command                                                                       
  ls                        - List all defined connections                                                  
  clear                     - Remove all connections                                                        
  set         [connection]  - Set default connection for current scope                                      
  set-global  <enabled>     - Toggle global mode (true = ignore git repository scope, false = use repository
                              scope)                                                                        
  describe                  - Describe all tables and columns available in database                         
  query       [queryArg]    - Run query against specified database                                          
  update                    - Update sqlr to the latest version                                             
  help                      - Display detailed help text with usage instructions                            

",
  outputError: "",
  sqlrCommand: "sqlr --help",
}
`;

snapshot[`sqlr CLI 2`] = `
{
  code: 0,
  output: \`  ┌────────────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Type       │ Connection string hint                                                           │
  ├────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ postgresql │ postgres://host:port/database_name?user=user&password=password(urlencoded)&appli │
  │            │ cation_name=sqlr                                                                 │
  │            │ Additional url parameters:                                                       │
  │            │ 'options' - additional values for connection                                     │
  │            │ (options=--cluster=your_cluster_name)                                            │
  │            │ More details: https://node-postgres.com/features/connecting                      │
  ├────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ mysql      │ mysql://user:password@host:port/database_name                                    │
  │            │ Additional url parameters:                                                       │
  │            │ 'ssl' - {"rejectUnauthorized":true|false}                                        │
  │            │ More details: https://github.com/sidorares/node-mysql2#readme                    │
  ├────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ mssql      │ mssql://user:password@host:port/database_name                                    │
  │            │ Additional url parameters:                                                       │
  │            │ 'encrypt' - true | false (default: true)                                         │
  │            │ 'trustServerCertificate' - true | false (default: false)                         │
  ├────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ clickhouse │ http(s)://user:password@host:port?database=database_name                         │
  │            │ Default port: 8123 (HTTP), 8443 (HTTPS)                                          │
  │            │ More details: https://clickhouse.com/docs/en/interfaces/http                     │
  └────────────┴──────────────────────────────────────────────────────────────────────────────────┘
\`,
  outputError: "",
  sqlrCommand: "sqlr ls-types",
}
`;

snapshot[`sqlr CLI 3`] = `
{
  code: 0,
  output: '
Usage:   sqlr query [queryArg]
Version: *                

Description:

  Run query against specified database

Options:

  -h, --help                                      - Show this help.                                                                                                                       
  --debug                                         - Enable debug logs                                                                                                                     
  -g, --global                                    - Use global scope for connections (ignore git repository scope)                                                                        
  -i, --input-variable       <var>                - Input variable in "key: value" format for {{key}} substitution in SQL                                                                 
  -o, --output-file          [output-file]        - Output file where JSON results will be stored                                                                                         
  -n, --name                 [name]               - Name of the connection                                                          (Conflicts: --type, --connection-string)              
  -t, --type                 [type]               - Type of the connection                                                          (Values: "postgresql", "mysql", "mssql", "clickhouse")
  -s, --connection-string    [connection-string]  - Connection string                                                                                                                     
  --table                                         - Display results as table                                                        (Conflicts: --compact)                                
  --compact                                       - Display results in compact form                                                 (Conflicts: --table)                                  
  --ignore-input-validation                       - Skip validation for missing input variables, allowing {{handlebars}} syntax to                                                        
                                                    pass through to the database                                                                                                          
  -y, --yes                                       - Skip confirmation prompt when executing SQL from a file                                                                               

',
  outputError: "",
  sqlrCommand: "sqlr query --help",
}
`;

snapshot[`sqlr CLI 4`] = `
{
  code: 0,
  output: '
Usage:   sqlr describe
Version: *        

Description:

  Describe all tables and columns available in database

Options:

  -h, --help                                    - Show this help.                                                                                                       
  --debug                                       - Enable debug logs                                                                                                     
  -g, --global                                  - Use global scope for connections (ignore git repository scope)                                                        
  -n, --name               [name]               - Name of the connection                                          (Conflicts: --type, --connection-string)              
  -t, --type               [type]               - Type of the connection                                          (Values: "postgresql", "mysql", "mssql", "clickhouse")
  -s, --connection-string  [connection-string]  - Connection string                                                                                                     
  -f, --filter             [filter]             - Filter results by schema/table name                                                                                   
  --table                                       - Display results in table                                                                                              
  --compact                                     - Display results in compact form                                                                                       

',
  outputError: "",
  sqlrCommand: "sqlr describe --help",
}
`;

snapshot[`sqlr CLI 5`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "SELECT 1 as test"',
}
`;

snapshot[`sqlr CLI 6`] = `
{
  code: 0,
  output: 'Query executed in: *ms
Rows affected: *
[
  { code: "ABW", name: "Aruba" },
  { code: "AFG", name: "Afghanistan" },
  { code: "AGO", name: "Angola" }
]
',
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "SELECT code, name FROM country ORDER BY code LIMIT 3"',
}
`;

snapshot[`sqlr CLI 7`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
  ┌──────┬─────────────┐
  │ code │ name        │
  ├──────┼─────────────┤
  │ ABW  │ Aruba       │
  ├──────┼─────────────┤
  │ AFG  │ Afghanistan │
  ├──────┼─────────────┤
  │ AGO  │ Angola      │
  └──────┴─────────────┘
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "SELECT code, name FROM country ORDER BY code LIMIT 3" --table',
}
`;

snapshot[`sqlr CLI 8`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
code,name
ABW,Aruba
AFG,Afghanistan
AGO,Angola
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "SELECT code, name FROM country ORDER BY code LIMIT 3" --compact',
}
`;

snapshot[`sqlr CLI 9`] = `
{
  code: 0,
  output: "SQL to execute:
SELECT 1 as input_file_test;

Query executed in: *ms
Rows affected: *
[ { input_file_test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" test-query.sql -y',
}
`;

snapshot[`sqlr CLI 10`] = `
{
  code: 0,
  output: "SQL to execute:
SELECT 1 as test;

Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" test-query-vars.sql -i "col: 1" -i "alias: test" -y',
}
`;

snapshot[`sqlr CLI 11`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
Results saved to /tmp/sqlr-test-output.json
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "SELECT 1 as test" -o /tmp/sqlr-test-output.json',
}
`;

snapshot[`sqlr CLI 12`] = `
{
  code: 0,
  output: 'Database schema:
[
  {
    schema: "public",
    name: "country",
    columns: [
      { name: "code", type: "character", nullable: false },
      { name: "name", type: "text", nullable: false },
      { name: "continent", type: "USER-DEFINED", nullable: false },
      { name: "region", type: "text", nullable: false },
      { name: "surface_area", type: "real", nullable: false },
      { name: "indep_year", type: "smallint", nullable: true },
      { name: "population", type: "integer", nullable: false },
      { name: "life_expectancy", type: "real", nullable: true },
      { name: "gnp", type: "numeric", nullable: true },
      { name: "gnp_old", type: "numeric", nullable: true },
      { name: "local_name", type: "text", nullable: false },
      { name: "government_form", type: "text", nullable: false },
      { name: "head_of_state", type: "text", nullable: true },
      {
        name: "capital",
        type: "integer",
        nullable: true,
        relation: "public.city.id"
      },
      { name: "code2", type: "character", nullable: false }
    ]
  },
  {
    schema: "public",
    name: "country_flag",
    columns: [
      { name: "code2", type: "character", nullable: false },
      { name: "emoji", type: "text", nullable: false },
      { name: "unicode", type: "text", nullable: true }
    ]
  },
  {
    schema: "public",
    name: "country_language",
    columns: [
      {
        name: "country_code",
        type: "character",
        nullable: false,
        relation: "public.country.code"
      },
      { name: "language", type: "text", nullable: false },
      { name: "is_official", type: "boolean", nullable: false },
      { name: "percentage", type: "real", nullable: false }
    ]
  }
]
',
  outputError: "",
  sqlrCommand: 'sqlr describe -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" -f "country"',
}
`;

snapshot[`sqlr CLI 13`] = `
{
  code: 0,
  output: 'Database schema:
  ┌─────────────────────────────┐
  │ public.country              │
  ├─────────────────────────────┤
  │ code character              │
  ├─────────────────────────────┤
  │ name text                   │
  ├─────────────────────────────┤
  │ continent USER-DEFINED      │
  ├─────────────────────────────┤
  │ region text                 │
  ├─────────────────────────────┤
  │ surface_area real           │
  ├─────────────────────────────┤
  │ indep_year? smallint        │
  ├─────────────────────────────┤
  │ population integer          │
  ├─────────────────────────────┤
  │ life_expectancy? real       │
  ├─────────────────────────────┤
  │ gnp? numeric                │
  ├─────────────────────────────┤
  │ gnp_old? numeric            │
  ├─────────────────────────────┤
  │ local_name text             │
  ├─────────────────────────────┤
  │ government_form text        │
  ├─────────────────────────────┤
  │ head_of_state? text         │
  ├─────────────────────────────┤
  │ capital -> "public.city.id" │
  ├─────────────────────────────┤
  │ code2 character             │
  └─────────────────────────────┘
  ┌─────────────────────┐
  │ public.country_flag │
  ├─────────────────────┤
  │ code2 character     │
  ├─────────────────────┤
  │ emoji text          │
  ├─────────────────────┤
  │ unicode? text       │
  └─────────────────────┘
  ┌───────────────────────────────────────┐
  │ public.country_language               │
  ├───────────────────────────────────────┤
  │ country_code -> "public.country.code" │
  ├───────────────────────────────────────┤
  │ language text                         │
  ├───────────────────────────────────────┤
  │ is_official boolean                   │
  ├───────────────────────────────────────┤
  │ percentage real                       │
  └───────────────────────────────────────┘
',
  outputError: "",
  sqlrCommand: 'sqlr describe -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" -f "country" --table',
}
`;

snapshot[`sqlr CLI 14`] = `
{
  code: 0,
  output: 'Database schema:
public.country [ code character, name text, continent USER-DEFINED, region text, surface_area real, indep_year? smallint, population integer, life_expectancy? real, gnp? numeric, gnp_old? numeric, local_name text, government_form text, head_of_state? text, capital -> "public.city.id", code2 character ]
public.country_flag [ code2 character, emoji text, unicode? text ]
public.country_language [ country_code -> "public.country.code", language text, is_official boolean, percentage real ]
',
  outputError: "",
  sqlrCommand: 'sqlr describe -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" -f "country" --compact',
}
`;

snapshot[`sqlr CLI 15`] = `
{
  code: 0,
  output: 'Missing input variables: template. Use -i "name: value" to provide them.
',
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" test-query-handlebars.sql -y',
}
`;

snapshot[`sqlr CLI 16`] = `
{
  code: 0,
  output: \`SQL to execute:
SELECT '{{template}}' as handlebars_value;

Query executed in: *ms
Rows affected: *
[ { handlebars_value: "{{template}}" } ]
\`,
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" test-query-handlebars.sql --ignore-input-validation -y',
}
`;

snapshot[`sqlr CLI 17`] = `
{
  code: 0,
  output: 'error: syntax error at or near "INVALID"
',
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable" "INVALID SQL QUERY"',
}
`;

snapshot[`sqlr CLI 18`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-pg -t postgresql -s "postgres://world:world123@localhost:5432/world-db?sslmode=disable"',
}
`;

snapshot[`sqlr CLI 19`] = `
{
  code: 0,
  output: "  ┌─────────┬────────────┐
  │ Name    │ Type       │
  ├─────────┼────────────┤
  │ test-pg │ postgresql │
  └─────────┴────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr CLI 20`] = `
{
  code: 0,
  output: "Using connection: test-pg
Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -n test-pg "SELECT 1 as test"',
}
`;

snapshot[`sqlr CLI 21`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-pg",
}
`;

snapshot[`sqlr CLI - PostgreSQL SSL 1`] = `
{
  code: 0,
  output: "Query executed in: *ms
Rows affected: *
[ { test: 1 } ]
",
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5433/world-db?sslmode=require&application_name=sqlr" "SELECT 1 as test"',
}
`;

snapshot[`sqlr CLI - PostgreSQL SSL 2`] = `
{
  code: 0,
  output: 'Query executed in: *ms
Rows affected: *
[
  { code: "ABW", name: "Aruba" },
  { code: "AFG", name: "Afghanistan" },
  { code: "AGO", name: "Angola" }
]
',
  outputError: "",
  sqlrCommand: 'sqlr query -t postgresql -s "postgres://world:world123@localhost:5433/world-db?sslmode=require&application_name=sqlr" "SELECT code, name FROM country ORDER BY code LIMIT 3"',
}
`;

snapshot[`sqlr CLI - PostgreSQL SSL 3`] = `
{
  code: 0,
  output: 'Database schema:
[
  {
    schema: "public",
    name: "country",
    columns: [
      { name: "code", type: "character", nullable: false },
      { name: "name", type: "text", nullable: false },
      { name: "continent", type: "USER-DEFINED", nullable: false },
      { name: "region", type: "text", nullable: false },
      { name: "surface_area", type: "real", nullable: false },
      { name: "indep_year", type: "smallint", nullable: true },
      { name: "population", type: "integer", nullable: false },
      { name: "life_expectancy", type: "real", nullable: true },
      { name: "gnp", type: "numeric", nullable: true },
      { name: "gnp_old", type: "numeric", nullable: true },
      { name: "local_name", type: "text", nullable: false },
      { name: "government_form", type: "text", nullable: false },
      { name: "head_of_state", type: "text", nullable: true },
      {
        name: "capital",
        type: "integer",
        nullable: true,
        relation: "public.city.id"
      },
      { name: "code2", type: "character", nullable: false }
    ]
  },
  {
    schema: "public",
    name: "country_flag",
    columns: [
      { name: "code2", type: "character", nullable: false },
      { name: "emoji", type: "text", nullable: false },
      { name: "unicode", type: "text", nullable: true }
    ]
  },
  {
    schema: "public",
    name: "country_language",
    columns: [
      {
        name: "country_code",
        type: "character",
        nullable: false,
        relation: "public.country.code"
      },
      { name: "language", type: "text", nullable: false },
      { name: "is_official", type: "boolean", nullable: false },
      { name: "percentage", type: "real", nullable: false }
    ]
  }
]
',
  outputError: "",
  sqlrCommand: 'sqlr describe -t postgresql -s "postgres://world:world123@localhost:5433/world-db?sslmode=require&application_name=sqlr" -f "country"',
}
`;
